src/objects/Rate_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Email_Address__c</fullName>
        <description>This is the default email address for invoices for this account.</description>
        <label>Accounting Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To enable expedite surcharge</description>
        <label>Alternative Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Units__c</fullName>
        <label>Business Units</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Days__c</fullName>
        <label>Payment Term Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                    <default>true</default>
                    <label>30</label>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>240</fullName>
                </value>
                <value>
                    <fullName>270</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_After_Date_Surcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show “After Date” Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Quantity_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Quantity Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Rate_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Rate Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Rows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Video/Tech</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Rate Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Commission_Rate__c</columns>
        <columns>Notes__c</columns>
        <columns>Payment_Term_Days__c</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>